--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Giorgio Pietrabissa"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Economics PhD at Cemfi"
   location         : "Madrid, Spain"
   employer         :
