--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Giorgio Pietrabissa"
   avatar           : "profile.jpg"
-  bio              : "Economics PhD at Cemfi"
+  bio              : "PhD Candidate in Economics"
+  employer         : "CEMFI"
   location         : "Madrid, Spain"
-  employer         :
   pubmed           : 
   googlescholar    : 
   email            :  giorgio.pietrabissa@cemfi.edu.es
