--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpg"
   bio              : "PhD Candidate in Economics"
   employer         : "CEMFI"
-  location         : "Madrid, Spain"
+  location         :
   pubmed           : 
   googlescholar    : 
   email            :  giorgio.pietrabissa@cemfi.edu.es
