--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Giorgio Pietrabissa"
   avatar           : "profile.jpg"
-  bio              : "PhD Candidate in Economics"
-  employer         : "CEMFI"
+  bio              : "Assistant Professor"
+  employer         : "LSE Geography"
   location         :
   pubmed           : 
   googlescholar    : 
-  email            :  giorgio.pietrabissa@cemfi.edu.es
+  email            :  g.pietrabissa@lse.ac.uk
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
