--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Giorgio Pietrabissa"
   avatar           : "profile.jpg"
   bio              : "Assistant Professor"
-  employer         : "LSE Geography"
+  employer         : "<a href="https://www.lse.ac.uk/Geography-and-Environment" target="_blank">LSE Geography</a>"
   location         :
   pubmed           : 
   googlescholar    : 
