--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Giorgio Pietrabissa"
   avatar           : "profile.jpg"
   bio              : "Assistant Professor"
-  employer         : <a href="https://www.lse.ac.uk/Geography-and-Environment">"LSE Geo"</a>
-  location         :
+  employer         : "LSE Geography"
+  location         : "London"
   pubmed           : 
   googlescholar    : 
   email            :  g.pietrabissa@lse.ac.uk
