--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpg"
   bio              : "Assistant Professor"
   employer         : "LSE Geography"
-  location         : "London"
+  location         : 
   pubmed           : 
   googlescholar    : 
   email            :  g.pietrabissa@lse.ac.uk
